# alpha-c

./: .gitignore  Makefile.am  README  README.md  configure  configure.ac  log4crc
include/: hello_world.h
src/: glib_surfuring.c  hello_world.c  print_helloworld.c
